methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:5: error: not found: value estSurBaggle
    for (j<-1 to 7) { avance ; if (estSurBaggle) {bagel=true}
                                   ^MethodsReturning:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<- 1 to 7) {
        ^MethodsReturning:10: error: return outside method definition
return false ;
^